clusters/k3s-ha/codeserver/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
  labels:
    name: codeserver
