clusters/k3s-ha/codeserver/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codeserver
  namespace: codeserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.code.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: code-server
          port: 8080
    - match: Host(`code.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: code-server
          port: 8080
      middlewares:
        - name: default-headers
